update chat temperature

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -100,6 +100,7 @@ services:
       VECTOR_SIZE: ${VECTOR_SIZE}
       GRAPHQL_URL: ${HASURA_GRAPHQL_URL}
       GRAPHQL_ADMIN_SECRET: ${HASURA_GRAPHQL_ADMIN_SECRET}
+      OPENAI_CHAT_TEMPERATURE: 0.2
       PORT: 8100
 volumes:
   db_data:
